--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
-          </div>
         </div>
         <div class="col-md-4 d-none d-md-block">
           <h3>Let's connect</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiisexplicabo inventore. <br> <a href="#">youngshinmin1205@gmail.com</a></p>
+          <p>Let's have a chat and build connection, feel free to reach out. <br> <a href="#">youngshinmin1205@gmail.com</a></p>
+          <div class="row">
+            <div class="col-sm-8 social text-md-right">
+              <a href="#"><span class="icofont-linkedin"></span></a>
+              <a href="#"><span class="icofont-github"></span></a>
+              <a href="#"><span class="icofont-instagram"></span></a>
+            </div>
+          </div>
         </div>
       </div>
-
     </div>
   </div>
 
@@ -83,42 +83,42 @@
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".web">Web</a>
-              <a href="#" data-filter=".design">Design</a>
-              <a href="#" data-filter=".branding">Branding</a>
-              <a href="#" data-filter=".photography">Photography</a>
+              <a href="#" data-filter=".javascript">JavaScript</a>
+              <a href="#" data-filter=".python">Python</a>
+              <a href="#" data-filter=".other">Other</a>
+              <!-- <a href="#" data-filter=".photography">Photography</a> -->
             </div>
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item javascript col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Boxed Water</h3>
-                <span>Web</span>
+                <h3>Corona Virus Tracker</h3>
+                <span>ReactJS</span>
               </div>
               <img class="img-fluid" src="assets/img/img_1.jpg">
             </a>
           </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item python col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Build Indoo</h3>
-                <span>Photography</span>
+                <h3>Face Detection App</h3>
+                <span>Python</span>
               </div>
               <img class="img-fluid" src="assets/img/img_2.jpg">
             </a>
           </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item javascript col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Cocooil</h3>
-                <span>Branding</span>
+                <h3>Ball Collision and Bouncing</h3>
+                <span>JavaScript</span>
               </div>
               <img class="img-fluid" src="assets/img/img_3.jpg">
             </a>
           </div>
-          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item javascript col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Nike Shoe</h3>
@@ -127,7 +127,7 @@
               <img class="img-fluid" src="assets/img/img_4.jpg">
             </a>
           </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item javascript col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Kitchen Sink</h3>
@@ -136,7 +136,7 @@
               <img class="img-fluid" src="assets/img/img_5.jpg">
             </a>
           </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item javascript col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Amazon</h3>
@@ -187,7 +187,7 @@
       <div class="container">
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
-            <h3 class="h3 heading">My Services</h3>
+            <h3 class="h3 heading">My Skills</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
           </div>
         </div>
@@ -287,10 +287,9 @@
         <div class="col-sm-6">
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <a href="#"><span class="icofont-dribbble"></span></a>
-          <a href="#"><span class="icofont-behance"></span></a>
+          <a href="#"><span class="icofont-linkedin"></span></a>
+          <a href="#"><span class="icofont-github"></span></a>
+          <a href="#"><span class="icofont-instagram"></span></a>
         </div>
       </div>
     </div>
