--- a/work-single.html
+++ b/work-single.html
@@ -34,8 +34,6 @@
 </head>
 
 <body>
-
-  <!-- ======= Navbar ======= -->
   <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
     <div class="container py-2 py-md-5">
       <div class="row align-items-start">
@@ -49,19 +47,19 @@
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
+        </div>
+        <div class="col-md-4 d-none d-md-block">
+          <h3>Let's connect</h3>
+          <p>Let's have a chat and build connection, feel free to reach out. <br> <a href="#">youngshinmin1205@gmail.com</a></p>
+          <div class="row">
+            <div class="col-sm-8 social text-md-right">
+              <a href="#"><span class="icofont-linkedin"></span></a>
+              <a href="#"><span class="icofont-github"></span></a>
+              <a href="#"><span class="icofont-instagram"></span></a>
             </div>
           </div>
         </div>
-        <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiisexplicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
-        </div>
       </div>
-
     </div>
   </div>
 
@@ -82,7 +80,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Work Single Page</h2>
+            <h2>Corona Virus Tracker</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
           </div>
         </div>
@@ -121,7 +119,7 @@
     </section>
 
     <!-- ======= Testimonials Section ======= -->
-    <section class="section pt-0">
+   <!--<section class="section pt-0">
       <div class="container">
 
         <div class="owl-carousel testimonial-carousel">
@@ -160,16 +158,6 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
-          <div class="credits">
-            <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=MyPortfolio
-          -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
         </div>
         <div class="col-sm-6 social text-md-right">
           <a href="#"><span class="icofont-twitter"></span></a>
