--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h3>Corona Virus Tracker</h3>
                 <span>ReactJS</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_1.jpg">
+              <img class="img-fluid" src="assets/img/coronaimg.png">
             </a>
           </div>
           <div class="item python col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -121,8 +121,8 @@
           <div class="item javascript col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Nike Shoe</h3>
-                <span>Design</span>
+                <h3>Apple website animation</h3>
+                <span>JavaScript</span>
               </div>
               <img class="img-fluid" src="assets/img/img_4.jpg">
             </a>
@@ -130,13 +130,13 @@
           <div class="item javascript col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Kitchen Sink</h3>
-                <span>Photography</span>
+                <h3>Hand Tracker</h3>
+                <span>JavaScript</span>
               </div>
               <img class="img-fluid" src="assets/img/img_5.jpg">
             </a>
           </div>
-          <div class="item javascript col-sm-6 col-md-4 col-lg-4 mb-4">
+          <!-- <div class="item javascript col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Amazon</h3>
@@ -144,51 +144,89 @@
               </div>
               <img class="img-fluid" src="assets/img/img_6.jpg">
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </section><!-- End  Works Section -->
+
+    <!-- ======= Clients Section ======= -->
+    <!-- <section class="section">
+      <div class="container">
+        <div class="row justify-content-center text-center mb-4">
+          <div class="col-5">
+            <h3 class="h3 heading">Skills and Tools</h3>
+            <p></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4 col-sm-4 col-md-1">
+            <a href="#" class="client-logo"><img src="https://img.icons8.com/color/48/000000/javascript.png" alt="Image" class="img-fluid"/></a>
+          </div>
+          <div class="col-4 col-sm-4 col-md-2">
+            <a href="#" class="client-logo"><img src="https://img.icons8.com/color/48/000000/react-native.png" alt="Image" class="img-fluid"></a>
+          </div>
+          <div class="col-4 col-sm-4 col-md-2">
+            <a href="#" class="client-logo"><img src="https://img.icons8.com/color/48/000000/python.png" alt="Image" class="img-fluid"></a>
+          </div>
+          <div class="col-4 col-sm-4 col-md-2">
+            <a href="#" class="client-logo"><img src="https://img.icons8.com/color/48/000000/nodejs.png" alt="Image" class="img-fluid"></a>
+          </div>
+          <div class="col-4 col-sm-4 col-md-2">
+            <a href="#" class="client-logo"><img src="https://img.icons8.com/color/48/000000/mongodb.png" alt="Image" class="img-fluid"></a>
+          </div>
+          <div class="col-4 col-sm-4 col-md-2">
+            <a href="#" class="client-logo"><img src="assets/img/logo-google.png" alt="Image" class="img-fluid"></a>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- End Clients Section -->
 
     <!-- ======= Clients Section ======= -->
     <section class="section">
       <div class="container">
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
-            <h3 class="h3 heading">My Clients</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+            <h3 class="h3 heading">My Skills and Tools</h3>
+            <p></p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-adobe.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-uber.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-apple.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-netflix.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-nike.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-google.png" alt="Image" class="img-fluid"></a>
-          </div>
-
+        <div class="row skillsalign">
+          <ul class="skills">
+            <li>JavaScript</li>
+            <li>Python</li>
+            <li>Go</li>
+            <li>Node.js</li>
+            <li>ReactJs</li>
+            <li>React</li>
+            <li>Java</li>
+            <li>C#</li>
+            <li>SQL</li>
+            <li>MongoDB</li>
+            <li>Git</li>
+            <li>CI/CD</li>
+            <li>Terraform</li>
+            <li>AWS</li>
+            <li>Docker</li>
+            <li>JIRA</li>
+            <li>Confluence</li>
+            <li>Chef</li>
+            <li>RESTful APIs</li>
+            <li>Figma</li>
+        </ul>
         </div>
       </div>
     </section><!-- End Clients Section -->
+
+
 
     <!-- ======= Services Section ======= -->
     <section class="section">
       <div class="container">
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
-            <h3 class="h3 heading">My Skills</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+            <h3 class="h3 heading">My Experiences</h3>
+            <p></p>
           </div>
         </div>
         <div class="row">
