delete service page

--- a/about.html
+++ b/about.html
@@ -42,7 +42,6 @@
           <ul class="custom-menu">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About Me</a></li>
-            <li><a href="services.html">Skills</a></li>
             <li><a href="works.html">Works</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -54,8 +53,8 @@
           <p>Let's have a chat and build connection, feel free to reach out. <br> <a href="#">youngshinmin1205@gmail.com</a></p>
           <div class="row">
             <div class="col-sm-8 social text-md-right">
-              <a href="#"><span class="icofont-linkedin"></span></a>
-              <a href="#"><span class="icofont-github"></span></a>
+              <a href="https://www.linkedin.com/in/youngshin-min-603b74130/"><span class="icofont-linkedin"></span></a>
+              <a href="https://github.com/youngmin1205"><span class="icofont-github"></span></a>
               <a href="#"><span class="icofont-instagram"></span></a>
             </div>
           </div>
@@ -83,8 +82,8 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About Me</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-              officiis explicabo inventore.</p>
+            <p class="mb-0">Hi, I am Young, aspiring Software Engineering Student.</p>
+
           </div>
 
         </div>
@@ -152,15 +151,11 @@
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="assets/img/person_1_sq.jpg" alt="Image" class="img-fluid"></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dignissimos delectus minima reprehenderit
-              molestias illo dolorem et, odio!</p>
-            <p>Fuga fugit distinctio delectus iure vitae consequatur excepturi, mollitia, consectetur molestias sapiente
-              rem consequuntur, illum adipisci, sed obcaecati!</p>
-            <p>Ex, dolorem qui voluptas reprehenderit provident, ad ipsum iure a consequatur voluptatem incidunt nobis.
-              Vitae reiciendis quae ex.</p>
-            <p>Optio consectetur culpa nemo, fugit pariatur veniam voluptate laudantium rerum fuga dolor in maiores ea
-              nisi voluptatibus. Minus?</p>
-            <p><a href="#" class="readmore">Download my CV</a></p>
+              <p >I was born in Seoul and made Toronto my new home!</p>
+              <p >
+              I'm driven to creating delightful and intuitive digital experiences by making clean and semantic code and design.
+              I love using the latest technologies such as React.js in JavaScript and Devops.</p>
+            <p><a href="#" class="readmore">Download my resume</a></p>
           </div>
 
         </div>
@@ -176,21 +171,12 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
-          <div class="credits">
-            <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=MyPortfolio
-          -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
+         
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <a href="#"><span class="icofont-dribbble"></span></a>
+          <a href="https://www.linkedin.com/in/youngshin-min-603b74130/"><span class="icofont-linkedin"></span></a>
+          <a href="https://github.com/youngmin1205"><span class="icofont-github"></span></a>
+          <a href="#"><span class="icofont-instagram"></span></a>
           <a href="#"><span class="icofont-behance"></span></a>
         </div>
       </div>
