--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,6 @@
           <ul class="custom-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <li><a href="services.html">Skills</a></li>
             <li><a href="works.html">Works</a></li>
             <li class="active"><a href="contact.html">Contact</a></li>
           </ul>
@@ -82,8 +81,7 @@
         <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
             <h2>Contact</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-              officiis explicabo inventore.
+            <p class="mb-0">Let's talk and build the connection, feel free to reach out to me.
             </p>
           </div>
 
@@ -134,16 +132,12 @@
           <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
             <ul class="list-unstyled">
               <li class="mb-3">
-                <strong class="d-block mb-1">Address</strong>
-                <span>203 Fake St. Mountain View, San Francisco, California, USA</span>
-              </li>
-              <li class="mb-3">
-                <strong class="d-block mb-1">Phone</strong>
-                <span>+1 232 3235 324</span>
+                <strong class="d-block mb-1">Location</strong>
+                <span>Toronto, Canada</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Email</strong>
-                <span>youremail@domain.com</span>
+                <span>youngshinmin1205@gmail.com</span>
               </li>
             </ul>
           </div>
@@ -161,21 +155,12 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
-          <div class="credits">
-            <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=MyPortfolio
-          -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
+
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <a href="#"><span class="icofont-dribbble"></span></a>
+          <a href="https://www.linkedin.com/in/youngshin-min-603b74130/"><span class="icofont-linkedin"></span></a>
+          <a href="https://github.com/youngmin1205"><span class="icofont-github"></span></a>
+          <a href="#"><span class="icofont-instagram"></span></a>
           <a href="#"><span class="icofont-behance"></span></a>
         </div>
       </div>
