--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
           <ul class="custom-menu">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <li><a href="services.html">Skills</a></li>
             <li><a href="works.html">Works</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -49,8 +48,8 @@
           <p>Let's have a chat and build connection, feel free to reach out. <br> <a href="#">youngshinmin1205@gmail.com</a></p>
           <div class="row">
             <div class="col-sm-8 social text-md-right">
-              <a href="#"><span class="icofont-linkedin"></span></a>
-              <a href="#"><span class="icofont-github"></span></a>
+              <a href="https://www.linkedin.com/in/youngshin-min-603b74130/"><span class="icofont-linkedin"></span></a>
+              <a href="https://github.com/youngmin1205"><span class="icofont-github"></span></a>
               <a href="#"><span class="icofont-instagram"></span></a>
             </div>
           </div>
